# idi

./: .gitattributes  .gitignore  .travis.yml  License  MANIFEST.in  README.md  README.txt  Singularity  Singularity.py37  Singularity.py38  Singularity.simple  Singularity.slurm  Singularity.test  idi_sim.py  idi_simrecon.py  idi_simrecon_normalize.py  pyproject.toml  pythonwrapper.sh  requirements.txt  setup.cfg  setup.py
.github/: setupsingularity.sh
.github/conda/: bld.bat  build.sh  meta.yaml  wheel2conda.py
.github/workflows/: publish.yml  singularity.yml  test.yml  wheel.yml
.travis/: setupsingularity.sh
extra/: pythonwrapper.sh
idi/: __init__.py  util.py
idi/reconstruction/: __init__.py  autocorrelate3.pyx  autocorrelate3.pyxbld  common.py  cpucor.py  cpucorrad.py  cpusimple.py  cucor.py  cucorrad.py  cudirect.py  curad.py  cusimple.py  direct.py  directrad.py  ft.py  hitcor.py  hitcorrad.py  mkl_dfti.pxd  newrad.py  qcorrad.py  simple.py  singleshotnorm.py
idi/simulation/: __init__.py  common.py  cpu.py  cuda.py  cutime.py  sim.cu  simobj.py  simple.py  simtime.cu  time.py
idi/util/: __init__.py  accum.py  datasetreader.py  filters.py  funchelper.py  h5util.py  poissondisk.py  random.py  submitmagic.py
ipynb/: foil.ipynb  idi  plotrecon.ipynb  psanagpu.txt  recon-singleparticle.ipynb  recon.ipynb  sim.ipynb  sim_lammps.ipynb  startrecon.ipynb  startsim.ipynb  timedependent.ipynb  timeindependent-grating.ipynb  timeindependent-sc.ipynb  xpp.ipynb  xpp.py
kossel/: kossel.py  kossel.ui  kosselui.py  mplwidget.py  rangeslider.py  requirements.txt
reconstruction/: __init__.py  autocorrelate3.pyx  direct.py  ft.py  mkl_dfti.pxd  recongrid_normalize.py  reconrad_normalize.py
scripts/: idi_sim.py  idi_simrecon.py
src/: __init__.py
src/reconstruction/: __init__.py  autocorrelate3.c  directrad.py  ft.py
src/simulation/: sim.py
tests/: recon.py  sim.py  test_recon.py  test_sim.py  test_util.py  util.py
