[project]
requires-python = ">=3.6"
name = "idi"
dynamic = ["version"]
description = "idi simulation and reconstruction"
authors = [
  { name = "Felix Zimmermann", email = "fzimmermann89@gmail.com" }
]
dependencies = [
  "numpy",
  "cython",
  "numba",
  "numexpr",
  "scipy",
  "jinja2",
  "mkl-service",
  "matplotlib",
  "h5py",
  "mkl",
  "mkl-include"
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "tomli", "oldest-supported-numpy", "Cython", "mkl==2019; sys_platform == 'darwin'", "mkl; sys_platform == 'linux'", "mkl-include==2019; sys_platform != 'win32'", "mkl-devel; sys_platform == 'win32'"]

[tool]
