[project]
requires-python = ">=3.9, <3.13"
name = "idi"
dynamic = ["version"]
description = "idi simulation and reconstruction"
authors = [{ name = "Felix Zimmermann", email = "fzimmermann89@gmail.com" }]
dependencies = [
  "numpy<2.2",
  "cython",
  "numba",
  "numexpr",
  "scipy",
  "jinja2",
  "matplotlib",
  "h5py",
  "mkl",
  "mkl-include",
  "tqdm",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61.0",
  "tomli",
  "oldest-supported-numpy",
  "Cython",
  "mkl==2019; sys_platform == 'darwin'",
  "mkl; sys_platform == 'linux'",
  "mkl-include==2019; sys_platform != 'win32'",
  "mkl-devel; sys_platform == 'win32'",
  "ipdb",
]

[tool.ruff]
line-length = 130
target-version = "py39"
